# DataEngineering

./: .gitignore  requirements.txt
Algorithms/: algorithms.py
Algorithms/test_algorithms/: test_algorithms.py
Basic/Minimax/: model.py
Basic/TicTacToe/: TicTacToe.pyproj  TicTacToe.sln
DataStructures/: bs_tree.py  linked_list.py  main.py  node.py  queue_struc.py  stack.py
DataStructures/test_datastructure/: test_bs_tree.py  test_linear_structs.py
Database-basic/: ER-diagram.drawio.xml
ExceptionContexMan/: ExceptionContexMan.lnk  exception_context.py
Functions/: homework _functions.py
Iterators-Generators/: homework_iter.py
Minimax/: Minimax.pyproj  Minimax.sln  controller.py
OOP/Restaurant/: employee.py  item.py  main.py  restaurant.drawio  restaurant.py  table.py
OOP/Transports/: car.py  main.py  plane.py  ship.py  train.py  transports.drawio  transports.py  vehicle.py  vehicule.py
Pyspark/: .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_linter.sh  setup.py
Pyspark/regular_patients/: main.py  regular_patients.py
Pyspark/tests/: test_regular_patients.py
SQL-Basic/sql-scripts/: ddl.sql  dml.sql  select.sql
SQLAnalytic_and_Window_Functions/: analyt_func.sql
SQL_Indexes/: indexes.sql
Setup-codestyle/calc/: main.py
Test/: .coverage  conftest.py  requirements.txt  test_functions.py  test_product.py  test_shop.py  testing_to_test.py
TicTacToe/: TicTacToe.py
UDF_SP_Triggers/: sp.sql  triggers.sql  udf.sql
calc/: calc.py  calc.pyproj
venv1/: pyproject.toml
(+21 files in other folders)
