[project]
name = "pyspark"
version = "1"
description = "regular_patients_data"
authors = [
    {name = "quinyportales",email = "66879807+quinyportales@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint (>=3.3.4,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
